[package]
name = "minisudo"
description = "A little privilege escalator, for learning"

authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"
exclude = ["/files/*", "Justfile", "LICENCE", "/README.md"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ogham/minisudo"
version = "0.1.0"

[dependencies]
pam = "0.7"
rpassword = "4.0"
users = "0.8"
which = { version = "3.1", default-features = false }

serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
